# bixi-analytics

./: .cache.sqlite  00_dataeng_explore.ipynb  01_dataeng_stations.ipynb  01_dataeng_stations2-online.ipynb  01_eda_phase1.ipynb  02_eda_phase2.ipynb  04_station_capacity_episode.ipynb  05_timeseries_eda.ipynb  06_graph_eda.ipynb  06b_graph_community_eda.ipynb  07_features.ipynb  07a_features_extended.ipynb  08_model_init.ipynb  08a_model_exploration.ipynb  09_eda_station002.ipynb  09_stn0004_model.ipynb  09_stn0004_model_final.ipynb  10_graph_p2.ipynb  AGENTS.md  ANALYSIS_STRATEGY.md  Bixi_Station_030120261430.ipynb  CT_EDA2.ipynb  ColabRunModel_GBTRegressor_FeatureEng.ipynb  STN_0001_ML_Train_5Models.ipynb  Station_DIM_Table + EDA.ipynb  bikeshare.db  bixi_map_utilization.html  databricks_test.ipynb.ipynb  main.py  pyproject.toml  silver_ride_top5_canonical_v3.ipynb  silver_top10_traffic_connectivity_capacity_post21032026.ipynb  top20_stations_in_out_monthly.html  van_process.ipynb
EDA/: 02__eda_STN_0003.ipynb  02__eda_top10candidateStations_timeseries.ipynb  02__eda_top3 popularStations.ipynb  02__eda_tripdata.ipynb  03__feature_eng.ipynb  04__v1_advanced_modeling_STN_0003.ipynb  bike_availability_map.html  eda_stationVehicle.ipynb  eda_tripdata.ipynb
EDA_and_modeling/: 01__eda_stationTraffic.ipynb  04__v0_modeling.ipynb  04__v2_advanced_modeling_STN_0003.ipynb  04__v2_revamped_modeling_STN_0003.ipynb  05__v4_STN_0001_ML_Train_5Models.ipynb  05__v5_STN_0001_ML_Train_UnivariateSelector.ipynb  09_stn0003_model_restructured.ipynb  area_choropleth.html  area_heatmap.html  (+3 more)
(+143 files in other folders)
